2023-02-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
	git tag -a 5.1.5-alpha02 -m 'ncks bnr_wrt fix; ncrcat: no_cll_mth';git push --tags

	* ncremap/ncclimo WARNING and ERROR when user specifies output directory beginning with dash

2023-02-16  Charlie Zender  <zender@uci.edu>

	* nco_bnr_wrt() change wrt_bnr from C-type long to C-type size_t for UNIX/Windows consistency

	* nco_bnr_wrt() use unsigned long long pointers (not unsigned long pointers) for eight-byte words

	* nco_fl_nm_vld_ncz_syn() caveat that WARNING about missing fragment only applies to NCZarr objects

2023-02-15  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo use NERSC-compiled module since Cori now missing Intel library used by personal executables

2023-02-12  Charlie Zender  <zender@uci.edu>

	* Updated ChangeLog with earliest (1995) announcements of NCO availability

	* Successfully build and test with netCDF 4.9.1-final

2023-01-19  Charlie Zender  <zender@uci.edu>

	* Append cell_method by default only with ncra, not ncrcat/nces

2023-01-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha01: Morning Show';git push
	git tag -a 5.1.5-alpha01 -m 'Functionally identical to 5.1.4';git push --tags

	* Quiet clang++ v. 13 compiler warnings by shifting from sprintf() to snprintf()

2023-01-10  Charlie Zender  <zender@uci.edu>

	* Update homepage with NASA OSTFL project

	* NCO 5.1.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4: Bakhmut';git push
	git tag -a 5.1.4 -m 'all: deactivate SIMD, cxl UDUNITS2_PATH, no cmp NC_STRING/NC_VLEN, NCO_ERR_FL_LN; ncremap: +ve-dwn dpt, ARGO SOSE WOA18';git push --tags

2023-01-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-beta01: Habana';git push