@@ -1,8 +1,12 @@
-2023-02-19  Charlie Zender  <zender@uci.edu>
+2023-02-20  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.5-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
 	git tag -a 5.1.5-alpha02 -m 'ncks bnr_wrt fix; ncrcat: no_cll_mth';git push --tags
+
+	* Change implementation of FORCE_APPEND, FORCE_OVERWRITE from toggle to absolute
+
+2023-02-19  Charlie Zender  <zender@uci.edu>
 
 	* ncremap/ncclimo WARNING and ERROR when user specifies output directory beginning with dash
 
